test-policies-fail/block-team-ci-service-accounts/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: block-team-ci-service-accounts
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE", "DELETE"]
      resources: ["pods", "services", "configmaps"]
  validations:
  - expression: |
      !(request.userInfo.username.startsWith('system:serviceaccount:team-') &&
        request.userInfo.username.contains('-ci:')) ||
      request.userInfo.username.startsWith('system:serviceaccount:team-core-infra-ci')
    messageExpression: "'Service account ' + request.userInfo.username + ' is not allowed to perform this operation'"
    reason: Forbidden
